# ScreenCapture

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp
